SBVTestSuite/TestSuite/CompileTests/SCase/SCase14.stderr
SCase14.hs:11:14: error: [GHC-39584]
    " SCase14.hs:14:16-22: sCase: Arity mismatch.
        Type       : Expr
        Constructor: Var
        Expected   : 1
        Given      : 2

    " In the quasi-quotation:
        [sCase|Expr e of
               Zero          -> 0
               Num i         -> i
               Var s _       -> ite (s .== "a") 1 2
               Add a b       -> t e + t b
               Let _   _a  b -> t b
      |]
   |
11 | t e = [sCase|Expr e of
   |              ^^^^^^^^^...

